// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches Button dark expandMd toggleCollapse 1`] = `
.c0 {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  color: #fff;
  background-color: #343a40;
  border-color: #343a40;
  cursor: pointer;
  display: none;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

.c0:hover {
  color: #fff;
  background-color: #23272b;
  border-color: #1d2124;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(52,58,64,0.5);
}

@media (max-width:992px) {
  .c0 {
    display: block;
    font-size: 1.25rem;
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }
}

<button
  className="c0 sc-gzVnrw dvUyjS"
/>
`;

exports[`Styles matches Button dark expandSm toggleCollapse 1`] = `
.c0 {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  color: #fff;
  background-color: #343a40;
  border-color: #343a40;
  cursor: pointer;
  display: none;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

.c0:hover {
  color: #fff;
  background-color: #23272b;
  border-color: #1d2124;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(52,58,64,0.5);
}

@media (max-width:576px) {
  .c0 {
    display: block;
    font-size: 1.25rem;
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }
}

<button
  className="c0 sc-gzVnrw dvUyjS"
/>
`;

exports[`Styles matches Button light expandMd toggleCollapse 1`] = `
.c0 {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  color: #212529;
  background-color: #f8f9fa;
  border-color: #f8f9fa;
  cursor: pointer;
  display: none;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

.c0:hover {
  color: #212529;
  background-color: #e2e6ea;
  border-color: #dae0e5;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(248,249,250,0.5);
}

@media (max-width:768px) {
  .c0 {
    display: block;
    font-size: 1.25rem;
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }
}

<button
  className="c0 sc-gzVnrw dvUyjS"
/>
`;

exports[`Styles matches Button light expandMd toggleCollapse 2`] = `
.c0 {
  display: inline-block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  color: #212529;
  background-color: #f8f9fa;
  border-color: #f8f9fa;
  cursor: pointer;
  display: none;
}

.c0:hover,
.c0:focus {
  text-decoration: none;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,123,255,0.25);
}

.c0:hover {
  color: #212529;
  background-color: #e2e6ea;
  border-color: #dae0e5;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(248,249,250,0.5);
}

@media (max-width:1200px) {
  .c0 {
    display: block;
    font-size: 1.25rem;
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }
}

<button
  className="c0 sc-gzVnrw dvUyjS"
/>
`;
